1998-06-12  Stefan Taferner  <taferner@kde.org>

	* Fonts: improved font settings. The HTML widget
	unfortunately only honors the font family. Added new
	functions (kfontutils.h) for easy font to/from string
	conversion.

1998-06-12  Mario Weilguni   <mweilguni@kde.org> (KMail-0.7.1)
	* new sort algorithm - quicksort instead of bubble-sort

1998-06-11  Stefan Taferner  <taferner@kde.org> (KMail-0.7.0)

	* Initial start now opens the settings dialog. Don't
	be alerted, this will happen once for everybody now ;-)

	* Fonts: implemented font setting for HTML widget,
	list of messages, and composer.

	* Drag&Drop: implemented drag&drop of messages to
	folders. Dropping into HTML widget crashes KMail. 
	Could be a bug of the HTML widget, however.

	* Move-message: improved folder selection dialog.

	* Message-list: now cleared properly when the current
	folder is deleted.

1998-06-11  Markus Wuebben  <markus@kde.org> (KMail-0.6.9)

	* KMail now uses KFileDialog only!

1998-06-11  Mario Weilguni   <mweilguni@kde.org> (KMail-0.6.9)
	
	* "P" and "N" (next and previous mail) will cause the header
	list to be scrolled if the new item is not visible

	* fixed some code to prevent compiler warning

	* panner position is now (again) restored
	
1998-06-07  Stefan Taferner  <taferner@kde.org> (KMail-0.6.8)

	* Folders: changed message about index-recreation
	to debug from warning.

	* Message/Headers: Email addresses like <joe@home.org>
	(with the <> around the address) no longer lead to
	an empty field in the message list.

	* Headers: Removed extra space in header line(s).

	* Headers: Empty Subject moved From and Date one column
	left. Fixed (hopefully).

	* Composer: Send again did not decode quoted-printable
	sent messages. Fixed.

	* PGP: KMail did not ask for mantra upon first reading of
	an encrypted message. Applied patch, from Michael Vogel 
	<icarus@hades.pop-celle.de>, which hopefully works :-)

1998-05-13  Stefan Taferner  <taferner@kde.org> (KMail-0.6.7)
