@@ -297,6 +297,7 @@ protected:
   short mMnuIdUrgent, mMnuIdConfDeliver, mMnuIdConfRead;
   QString mForeColor, mBackColor, mBodyFont;
   QList<QLineEdit> mEdtList;
+  QString mPathAttach;
 #ifdef HAS_KSPELL
   KSpell* mKSpell;
   KSpellConfig* mKSpellConfig;
@@ -309,7 +310,6 @@ protected:
   QString mComposeCharset; 
   int mQuoteUnknownCharacters;
   QFont mSavedEditorFont;
-  QString mPathAttach;
 #endif  
 
 private:
